[package]
name = "fluxon_commu_closed_sdk_consumer"
version = "0.2.1"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = { workspace = true }
bitcode = { workspace = true }
bytes = { workspace = true }
fluxon_commu_contract = { path = "../fluxon_commu_contract" }
libc = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }
