[package]
name = "fluxon_framework"
version = "0.2.1"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
paste = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
limit_thirdparty = { path = "../limit_thirdparty" }
thiserror = { workspace = true }
tokio = { workspace = true }
fluxon_framework_compiled = { path = "../fluxon_framework_compiled" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
