[package]
name = "fluxon_framework_compiled"
version = "0.2.1"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
paste = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
limit_thirdparty = { path = "../limit_thirdparty" }
fluxon_util = { path = "../fluxon_util" }
thiserror = { workspace = true }
tokio = { workspace = true }
crossbeam-queue = "0.3"
uuid = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
