[package]
name = "fluxon_fs_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
postcard.workspace = true
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
