[workspace]
members = []
resolver = "2"

[package]
name = "fluxon_fs_fuse_draft"
version = "0.0.1"
edition = "2024"

[features]
default = []
runtime_fuser = ["dep:fuser", "dep:serde"]
fsagent_backend = ["dep:fluxon_fs", "dep:tokio"]

[dependencies]
thiserror = "1.0"
parking_lot = "0.12"
libc = "0.2"
serde_json = "1.0"
fluxon_fs_core = { path = "../fluxon_fs_core" }
fluxon_fs = { path = "../fluxon_fs", optional = true }
fuser = { version = "0.17.0", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt", "sync", "time"], optional = true }
