[package]
name = "fluxon_fs_s3_gateway"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
hyper = { workspace = true }
axum = { version = "0.6.20", features = ["multipart"] }
url = "2"
bytes = "1"
async-stream = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.21"
urlencoding = "2"
parking_lot = { workspace = true }
tracing = { workspace = true }
tower = "0.4"
rusqlite = { version = "0.32.1", features = ["bundled"] }
crossbeam-channel = { workspace = true }
postcard = { workspace = true }
tikv-client = "0.4.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

fluxon_kv = { path = "../fluxon_kv", default-features = false }
fluxon_fs_core = { path = "../fluxon_fs_core" }
fluxon_observability = { path = "../fluxon_observability" }
fluxon_util = { path = "../fluxon_util" }
