[package]
name = "fluxon_kv"
version = "0.2.1"
edition = "2024"

[features]
# Default enable P2P data transfer path for ClientTransferEngine.transfer_data.
# Keep tcp_thread as the crate-level default transport so builds that do not pass an explicit
# transport feature still exercise the same baseline as the benchmark/test stack.
# Public open builds only expose a single bundled closed runtime snapshot.
default = ["p2p_transfer", "tcp_thread_transport"]

# Build test binaries (disabled by default). Enabling this also enables
# re-export of tokio::spawn from limit_thirdparty for tests.
test_bins = ["limit_thirdparty/export_spawn_for_tests"]
## Use P2P transport for bulk data transfer instead of the native transfer engine.
## This is a compile-time switch with no runtime fallback: when enabled, the
## client_transfer_engine::transfer_data function routes reads/writes through
## P2P RPC defined in that module. When disabled, the existing transfer engine
## implementation is used. This feature does not add external dependencies; it
## only toggles code paths.
p2p_transfer = []
# Enable the closed tquic-based P2P transport backend.
tquic_transport = ["fluxon_commu/tquic_transport"]
# Enable the closed tquic-based P2P transport backend (v2: two uni streams ctrl/bulk).
tquic_transport_v2 = ["tquic_transport", "fluxon_commu/tquic_transport_v2"]
# Enable WebSocket-over-TCP P2P transport backend (tokio-tungstenite).
fastws_transport = ["dep:tokio-tungstenite", "fluxon_commu/fastws_transport"]

# Enable WebSocket-over-TCP P2P transport backend (sockudo-ws).
sockudo_ws_transport = ["dep:sockudo-ws", "fluxon_commu/sockudo_ws_transport"]

# Enable framed TCP P2P transport backend.
tcp_transport = ["fluxon_commu/tcp_transport"]
# Enable threaded framed TCP P2P transport backend.
tcp_thread_transport = ["fluxon_commu/tcp_thread_transport"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
hyper = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
paste = { workspace = true }
qp2p = { workspace = true }
bitcode = { workspace = true }
rand = { workspace = true }
downcast-rs = { workspace = true }
lazy_static = { workspace = true }
local-ip-address = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
etcd-client = { workspace = true }
moka = { workspace = true }
crossbeam = "0.8"
tokio-metrics-collector = "0.3"
libc = "0.2"
zeromq = "0.4"
kanal = "0.1"
bytes = "1"
pprof = { version = "0.15", features = ["flamegraph"] }
hex = "0.4"
sha2 = "0.10"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "handshake"], optional = true }

sockudo-ws = { version = "^1.7.4", default-features = false, features = ["tokio-runtime", "fastrand"], optional = true }

# Local IPC tier (iceoryx2) uses crates.io releases (no vendoring).
# Keep versions pinned to avoid accidental API drift.
iceoryx2 = { version = "0.8.1", features = ["std"] }
iceoryx2-cal = { version = "0.8.1", default-features = false, features = ["std"] }

# Required for framework macros that refer to ::tokio types. Code paths in this crate
# must use `limit_thirdparty::tokio` for runtime functions per project policy.
tokio = { workspace = true }

fluxon_commu = { package = "fluxon_commu", path = "../fluxon_commu", default-features = false }
fluxon_framework = { path = "../fluxon_framework" }
fluxon_framework_compiled = { path = "../fluxon_framework_compiled" }
limit_thirdparty = { path = "../limit_thirdparty" }
fluxon_util = { path = "../fluxon_util" }
fluxon_observability = { path = "../fluxon_observability" }
[build-dependencies]
tonic-build = { workspace = true }
fluxon_util = { path = "../fluxon_util" }
fluxon_observability = { path = "../fluxon_observability" }

[[bin]]
name = "fluxon_kv"
path = "src/main.rs"

[[bin]]
name = "kv_test"
path = "src/bin/kv_test.rs"
required-features = ["test_bins"]

[[bin]]
name = "external_client_test"
path = "src/bin/external_client_test.rs"
required-features = ["test_bins"]

[dev-dependencies]
