[package]
name = "fluxon_observability"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros", "fs", "io-util", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
prost = { workspace = true }
async-trait = { workspace = true }
bitcode = { workspace = true }
fluxon_util = { path = "../fluxon_util" }
prometheus = "0.14"
sysinfo = "0.30"
opentelemetry-proto = { version = "0.6", default-features = false, features = ["gen-tonic-messages", "logs"] }
libc = { workspace = true }
