[package]
name = "fluxon_pyo3"
version = "0.2.1"
edition = "2024"

[lib]
name = "fluxon_pyo3"
crate-type = ["cdylib"]

[features]
default = ["p2p_transfer", "tcp_thread_transport"]
p2p_transfer = ["fluxon_kv/p2p_transfer"]
tquic_transport = ["fluxon_kv/tquic_transport"]
tquic_transport_v2 = ["fluxon_kv/tquic_transport_v2"]
fastws_transport = ["fluxon_kv/fastws_transport"]
sockudo_ws_transport = ["fluxon_kv/sockudo_ws_transport"]
tcp_transport = ["fluxon_kv/tcp_transport"]
tcp_thread_transport = ["fluxon_kv/tcp_thread_transport"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
etcd-client = { workspace = true }
crossbeam-channel = { workspace = true }
hyper = { workspace = true }
libc = { workspace = true }
bytes = "1"
limit_thirdparty = { path = "../limit_thirdparty" }

fluxon_commu = { path = "../fluxon_commu", default-features = false }
fluxon_kv = { path = "../fluxon_kv", default-features = false }
fluxon_framework = { path = "../fluxon_framework" } 
fluxon_framework_compiled = { path = "../fluxon_framework_compiled" }
fluxon_util = { path = "../fluxon_util" }
fluxon_mq = { path = "../fluxon_mq" }
fluxon_cli = { path = "../fluxon_cli" }
fluxon_ops = { path = "../fluxon_ops" }
fluxon_fs = { path = "../fluxon_fs" }
fluxon_proxy = { path = "../fluxon_proxy" }
