[package]
name = "fluxon_util"
version = "0.2.1"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Utility crate with macros and helper functions"
license = "MIT OR Apache-2.0"

#[features]
# Python types (pyo3) are now always available; no conditional compilation.

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
local-ip-address = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
tracing-log = "0.1"
chrono = { workspace = true }
moka = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "macros"] }
limit_thirdparty = { path = "../limit_thirdparty" }
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
snap = "1"
prost = { workspace = true }
libc = { workspace = true }
serde_yaml = { workspace = true }
dashmap = { workspace = true }
etcd-client = { workspace = true }
pyo3 = { version = "0.22", features = ["abi3-py38"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-stream = { workspace = true }
limit_thirdparty = { path = "../limit_thirdparty", features = [
    "export_spawn_for_tests",
] }
serial_test = "3.2.0"

[target.'cfg(trybuild)'.dev-dependencies]
trybuild = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(trybuild)"] }

[build-dependencies]
serde_json = { workspace = true }
tokio-stream = { workspace = true }
hex = "0.4"
sha2 = "0.10"
